--- a/.eslintrc
+++ b/.eslintrc
@@ -106,6 +106,13 @@
       "rules": {
         "@typescript-eslint/no-var-requires": "off"
       }
+    },
+    {
+      "files": ["**/*.example.tsx"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "no-plusplus": "off"
+      }
     }
   ]
 }
