--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
   ],
   "scripts": {
     "clean:dist": "yarn rimraf dist",
-    "prebuild": "jest && yarn clean:dist && yarn build:types && yarn build:styles",
+    "prebuild": "jest && yarn clean:dist && yarn build:types",
     "build": "rollup -c",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:styles": "node ./src/scripts/buildStyles.js",
-    "prettier:examples": "prettier --config ./.prettierrc --write 'src/components/List/*.md'",
-    "release": "yarn build && yarn np --yolo && yarn styleguide:build",
+    "release": "yarn build && yarn np --yolo",
     "lint": "eslint --ext .ts,.tsx ./src",
     "test": "jest --watch",
     "styleguide": "styleguidist server",
