--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,12 @@
     "noImplicitAny": false,
     "noImplicitThis": false
   },
-  "exclude": ["config", "dist", "node_modules", "src/**/*.spec.*"],
+  "exclude": [
+    "config",
+    "dist",
+    "node_modules",
+    "src/styleguide",
+    "src/**/*.spec.*"
+  ],
   "includes": ["src"]
 }
