--- a/.eslintrc
+++ b/.eslintrc
@@ -94,6 +94,7 @@
     {
       "files": ["*.spec.tsx", "*.spec.ts"],
       "rules": {
+        "no-plusplus": "off",
         "padding-line-between-statements": "off",
         "sort-keys": "off",
         "@typescript-eslint/no-explicit-any": "off",
